Create Service/PaypalAdapter - integrate paypal api for order process Update Models/Product.php - declare relationship between cartItem and product Update AppServiceProvider - configure bootstrap paging Update composer.json - install http client - install symfony http client - install doctrine/dbal Update css/app.css Update auth/login.blade.php - add navigation links Update products/index.blade.php Update includes/head.blade.php Update includes/menu.blade.php Update layouts/admin.blade.php Update routes/web.php - add routes for shop, cart, checkout, paypal, orders pages create Checkout/Form.php - create html form for payments process Create Admin/OrdersController.php Create Shop/CartController.php - integrate shopping cart functionality Create Shop/CheckoutController.php - integrate checkout functionality Create Shop/PaypalController.php - integrate paypal payment process Create Shop/CartController.php Create Service/CartManager.php - integrate specific logic for Cart model Create Service/OrderManager.php - integrate specific logic for Order model Create Payment/PaymentInterface.php - each payment method should use this interface Create Payment/Paypal.php Create Models/Cart.php - declare relation with cartItem model Create CartItem.php - declare relation with cart, product  models Create Order.php - declare relation with orderItem model Create OrderItem.php - declare relation with order, product  models Create config/paypal.php Create CartFactory.php Create CartItemFactory.php Create OrderFactory.php Create OrderItemFactory.php Create new migrations Create new templates

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -4501,6 +4501,7 @@ textarea.form-control-lg {
     display: flex;
     padding-left: 0;
     list-style: none;
+    height: 100px !important;
 }
 
 .page-link {
@@ -15647,3 +15648,7 @@ Copyright (c) 2014 Daniel Eden
     z-index: 1;
     height: 100%;
     width: 100%; }
+
+.products {
+    margin-top: 120px
+}
