Remove layouts/app.blade.php - not used Remove welcome.blade.php - not used Update ContactsController - implement cache flush logic Update css/app.css - update styles Update cart/index.blade.php - update organization Update includes/header.blade.php - remove alerts Update shopHeader.blade.php - remove alerts Update layouts/main.blade.php - add alerts Update layouts/shop.blade.php - add alerts Update routes/web.php - add route for HomeController.php Create HomeController.php - create index method and save page content in CACHE Create new template

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -15649,6 +15649,6 @@ Copyright (c) 2014 Daniel Eden
     height: 100%;
     width: 100%; }
 
-.products {
-    margin-top: 120px
+.notifications {
+    margin: 100px 0 0;
 }
