Update css/app.css - add new style for shop section on home page Update home/index.blade.php - add shop section Update includes/menu.blade.php - remove old links - add new anchor link Update includes/shopMenu.blade.php - add new admin page link Update layouts/admin.blade.php - move bootstrap js in page head Update  layouts/main.blade.php - remove bootstrap js file Update layouts/shop.blade.php - remove bootstrap js file

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -11808,6 +11808,11 @@ Portfolio
 ---------------------------------------------
 */
 
+.our-shop {
+    padding-top: 120px;
+    margin-top: 0px;
+}
+
 .our-portfolio {
     padding-top: 120px;
     margin-top: 0px;
